revised application engineering services content

--- a/_data/pageconfig/technologies.yaml
+++ b/_data/pageconfig/technologies.yaml
@@ -6,25 +6,26 @@ pages:
     programmes:
       api-development:
         title: API Development
-        description: API development, an essential component of modern software architecture, entails crafting interfaces for seamless communication between diverse applications. Partnering with AxOps&#8482; for your API Development needs ensures adherence to industry best practices for robustness, security, and interoperability.
+        description: We provide a comprehensive API development service, employing industry-standard methodologies and cutting-edge tools to create robust, scalable, and secure APIs. Our approach incorporates meticulous planning, design, and documentation to ensure seamless integration with existing systems and optimal performance. Partnering with AxOps&#8482; ensures delivery that adheres strictly to industry best practices for robustness, security, and interoperability.
         benefits:
-          - Enhance system interoperability
-          - Facilitate seamless data exchange
-          - Enable third-party integrations
-          - Promote reusable code components
+          - Enhanced system interoperability and modularity
+          - Streamlined data exchange and communication
+          - Facilitates scalability and adaptability
+          - Encourages code reusability and maintainability
 
       saas-development:
         title: SaaS Development
-        description: Software-as-a-Service (SaaS) Development refers to the process of creating and maintaining web-based applications, which are delivered over the internet on a subscription basis. AxOps&#8482; has extensive experience building SaaS applications across several industry verticals, and adheres strictly to industry best practices through every stage of the project lifecycle.
+        description: AxOps™ provides a comprehensive Software-as-a-Service (SaaS) development solution including design, implementation, and maintainance of scalable and secure cloud-based applications, employing industry best practices and methodologies such as microservices architecture, containerisation, and continuous integration / continuous deployment (CI/CD) pipelines.
         benefits:
-          - Cost-effective deployments
-          - Simplified application management
-          - Seamless scalability and flexibility
-          - Enhanced data security and compliance
+          - Streamlined application delivery management, reducing fixed and operational overheads
+          - Rapid and agile development, enabling convenient iterations throughout the project lifecycle
+          - Scalable and flexible architecture to support growth and adaptation to evolving project requirements
+          - Robust security and compliance with industry standards, ensuring data protection and privacy
+
       
       cloud-engineering:
         title: Cloud Engineering
-        description: Cloud Engineering refers to the design, development, and management of computing resources and services in a cloud-based environment. AxOps™ brings extensive field and subject matter Cloud expertise to your table, always adhering to industry best practices through every stage of the project lifecycle.
+        description: Our team of vendor-certified Cloud professionals provide a comprehensive cloud engineering service focused on solution design, implementation, delivery and management of cloud-based infrastructure and applications. AxOps™ brings extensive field and subject matter Cloud expertise to your table, our approach ensuring optimal performance, security, and scalability in line with your organisation's needs.
         benefits:
           - Infinite elasticity, cost-efficiency, and global availability
           - Pay-as-you-go as opposed to fixed on-premise overheads
@@ -42,12 +43,24 @@ pages:
 
       full-stack-development:
         title: Full-Stack Development
-        description: ...
+        description: Our Full-Stack Software Engineering service encompasses front-end, back-end, and infrastructure development, utilising industry best practices to deliver robust, scalable solutions.
         benefits:
+          - Streamlined development process reduces time-to-market
+          - Enhanced system maintainability with modular architecture
+          - Optimised resource allocation for improved efficiency
+          - Unified technology stack ensures seamless integration
+
+
+
       
       blockchain-development:
         title: Blockchain Development
-        description: ...
+        description: Blockchain Application Development involves the design, implementation, and deployment of decentralised applications using blockchain technology. Leverage the AxOps™ team's extensive experience in releasing large-scale Blockchain engineering projects (see Case Studies).
         benefits:
+          - Secure digital identity management
+          - Real-time, multi-party tracking and management
+          - Transparent, real-time, point-to-point transactions
+          - Decentralised data storage & sharing
+
         
 
