--- a/_data/pageconfig/technologies.yaml
+++ b/_data/pageconfig/technologies.yaml
@@ -4,12 +4,26 @@ pages:
     tagline: "Empowering Your Digital Evolution: AxOps™ Cloud & Infrastructure Solutions"
 
     services:
-      data-lakes:
-        title:
-        description:
+      data-lake-solutions:
+        title: Data Lake Solutions
+        description: Our Data Lake consulting and development solutions enable clients to efficiently store, manage, and process vast amounts of structured and unstructured data. We leverage industry best practices to design and implement scalable, secure, and compliant data lakes, tailored to your organisation's unique requirements.
         benefits:
+          - "Centralise and consolidate disparate data sources for improved accessibility."
+          - "Unlock valuable insights with advanced analytics, machine learning, and AI."
+          - "Seamlessly scale storage and processing capabilities while optimising costs."
+          - "Ensure data compliance, security, and quality through well-defined policies and processes."
 
-        
+      cloud-migration:
+        title: Cloud Migration
+        description: Our cloud migration solutions are tailored to meet your organisation's unique requirements. We work closely with our clients to ensure seamless migration of applications, data, and on-premise infrastructure to the cloud, enabling them to reap the benefits of the Cloud's economies of scale and global availability.
+        benefits:
+          - Reduce high CapEx and optimise OpEx with a tailored hybrid or public Cloud strategy.
+          - Benefit from near-infinite availability of Compute and Storage as you evolve.
+          - Leverage vendor-maintained physical Cloud security and focus on building your solutions.
+          - Streamline operations and improve performance by using cloud-native services.
+
+
+
   technologies-application-engineering.md:
     title: Application Engineering
     tagline: "Empower Innovation with AxOps&#8482;: Engineer Applications with Confidence"
