--- a/_data/pageconfig/technologies.yaml
+++ b/_data/pageconfig/technologies.yaml
@@ -39,6 +39,15 @@ pages:
           - "Minimised downtime and ensured business continuity."
           - "Preserved data integrity and security during disruptive events."
           - "Fault-tolerant and cloud-native disaster recovery infrastructure."
+
+      hybrid-architecture:
+        title: Hybrid Architecture
+        description: Our hybrid architecture solutions enable your organisation to scale its compute and storage capacity into the public cloud on demand and cost-effectively. This unified IT infrastructure permits scaling efficiently in response to changing demands on a pay-as-you-go basis, instead of via increases in fixed CapEx.
+        benefits:
+          - "Enhanced scalability for fluctuating workloads"
+          - "Cost-effective utilisation of computing resources"
+          - "Improved compliance with regulatory requirements"
+          - "Supports legacy infrastructure and mission-critical applications"
         
 
   technologies-application-engineering.md:
@@ -57,7 +66,7 @@ pages:
 
       devops-automation:
         title: DevOps Automation
-        description: We employ proven methodologies and cutting-edge tools to streamline software development and operations. Our approach facilitates rapid, high-quality deployments, minimising manual intervention and maximising efficiency. We adhere to industry best practices, ensuring optimal integration of the development and operations functions for robust and reliable deployments.
+        description: We employ proven methodologies and cutting-edge CI/CD tooling to streamline software development and operations. Our approach facilitates rapid, high-quality deployments, minimising manual intervention and maximising efficiency. We adhere to industry best practices, ensuring optimal integration of the development and operations functions for robust and reliable deployments.
         benefits:
           - Agile collaboration between development and operations teams fosters innovation.
           - Increased deployment frequency, accelerating time to market for new features and improvements.
@@ -66,7 +75,7 @@ pages:
 
       full-stack-development:
         title: Full-Stack Development
-        description: Our Full-Stack Software Engineering service encompasses front-end, back-end, and infrastructure development, utilising industry best practices to deliver robust, scalable solutions. We employ cutting-edge technologies, methodologies, and tools, while continuously refining our processes to ensure optimal results and deliver high-quality software products.
+        description: Our Full-Stack Software Engineering service encompasses front-end, back-end, and infrastructure development, utilising industry best practices to deliver robust, scalable solutions. We employ proprietary methodologies and development tools, our approach tailored to your organisation's specific needs for reliable delivery and consistent release cycles.
         benefits:
           - Development of reliable and maintainable software that can adapt to changing needs.
           - Streamlined project workflows and agile approach to deliver timely, cost-effective solutions.
