--- a/_data/pageconfig/technologies.yaml
+++ b/_data/pageconfig/technologies.yaml
@@ -51,7 +51,7 @@ pages:
       
       serverless-computing:
         title: Serverless Computing
-        description: "Serverless computing enables developers to create, manage, and deploy applications without the need to manage infrastructure. Benefit from auto-scaling, built-in high availability, and pay-as-you-go pricing for cost efficiency. By eliminating infrastructure management tasks, such as capacity provisioning and patching, going serverless allows your teams to focus on tasks that deliver actual value and drive business growth."
+        description: "AxOps™ can both actively assist and train your development teams to create, manage, and deploy applications in the Cloud without the need to manage infrastructure. Benefits include auto-scaling, built-in high availability, and pay-as-you-go pricing for cost efficiency. By eliminating infrastructure management tasks, such as capacity provisioning and patching, going serverless allows your teams to focus on tasks that deliver actual value and drive business growth."
         benefits:
           - "Accelerate time-to-market with reduced operational overhead."
           - "Optimise operating costs with pay-as-you-go pricing."
