initialised technologies-database-migration yaml

--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -205,7 +205,7 @@
           enabled: true
     -
       name: Data Management
-      url: /data-analytics
+      url: /data-management
       enabled: true
       children:
         -
